--- a/Portfolio/GoodBuy.html
+++ b/Portfolio/GoodBuy.html
@@ -52,7 +52,7 @@
 		<div class="designProcess">
 			<h3> Design Process </h3>
 			<h5> <Strong> Competitive Analysis </strong> </h5>
-			<img src="images/CA.png" alt="CA">
+			<img src="images/CA.png" alt="CA" width="100">
 			<p>The competitive analysis focused on 4 popular second hand transaction platforms. Pros and cons of these four existing platforms are studied.  The key findings after competitive analysis include:
 				<ul>
 					<li><p>Although these platforms all have the function of searching for products based on location, it's still far and inconvenient for delivery if the product is something heavy as a coach or mattress even if the transaction is made in the same city.</p></li>
@@ -62,18 +62,18 @@
 			<h5> <Strong> Persona and Anti-persona </strong> </h5>
 				<div class="row">
   					<div class="column">
-  						<img src="images/Ann.png" alt="persona1" width="100">
+  						<img src="images/Ann.png" alt="persona1" width="1500">
   					</div>
   					<div class="column">
-  						<img src="images/Allen.png" alt="persona2" width="100">
+  						<img src="images/Allen.png" alt="persona2" width="500">
   					</div>
   				</div>
   				<div class="row">
   					<div class="column">
-  						<img src="images/Aaron.png" alt="persona3" width="100">
+  						<img src="images/Aaron.png" alt="persona3" width="500">
   					</div>
   					<div class="column">
-  						<img src="images/Daisy.png" alt="persona4" width="100">
+  						<img src="images/Daisy.png" alt="persona4" width="500">
   					</div>	
 				</div>
 		</div>
