--- a/Portfolio/Photography.html
+++ b/Portfolio/Photography.html
@@ -19,7 +19,7 @@
 		<nav class="navbar navbar-default">
 		<div class="container">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false" value="hamburger">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -81,11 +81,11 @@
 
 	<!-- Footer -->
 	<footer>
-			<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x"></a>
-			<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x"></a>
-			<a href="https://www.instagram.com/xuenanx/" class="fa fa-linkedin fa-2x"></a>
-			<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-instagram fa-2x"></a>
-			<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
+		<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x" text="facebook"></a>
+		<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x" text="twitter"></a>
+		<a href="https://www.instagram.com/xuenanx/" class="fa fa-linkedin fa-2x" text="linkedin"></a>
+		<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-instagram fa-2x" text="instagram"></a>
+		<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
 	</footer>
 
 </body>
