--- a/Portfolio/GoodBuy.html
+++ b/Portfolio/GoodBuy.html
@@ -83,10 +83,10 @@
 
 <!-- Footer -->
 	<footer>
-		<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x" text="facebook"></a>
-		<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x" text="twitter"></a>
-		<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-linkedin fa-2x" text="linkedin"></a>
-		<a href="https://www.instagram.com/xuenanx/" class="fa fa-instagram fa-2x" text="instagram"></a>
+		<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x" alt="facebook"></a>
+		<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x" alt="twitter"></a>
+		<a href="https://www.linkedin.com/in/xuenan-xu-a4999299/" class="fa fa-linkedin fa-2x" alt="linkedin"></a>
+		<a href="https://www.instagram.com/xuenanx/" class="fa fa-instagram fa-2x" alt="instagram"></a>
 		<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
 	</footer>
 
