--- a/Portfolio/GoodBuy.html
+++ b/Portfolio/GoodBuy.html
@@ -17,7 +17,7 @@
 		<nav class="navbar navbar-default">
 		<div class="container">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false" value="hamburger">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
