--- a/Portfolio_revised/Portfolio_Homepage.html
+++ b/Portfolio_revised/Portfolio_Homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title> Xuenan Xu | Photography </title>
+	<title> Xuenan Xu </title>
 	<meta charset ="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<header>
-		<!-- Navigation Bar -->
+		<!-- Navigation bar -->
 		<nav class="navbar navbar-default">
 		<div class="container">
 				<div class="navbar-header">
@@ -26,59 +26,39 @@
 			</button>
 				<a class="navbar-brand" href="Portfolio_Homepage.html"> <img src="images/Logo.png" alt ="Logo" width = "150"> </a>
 				</div>
+				
 				<div id="myNavbar" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="Portfolio_Homepage.html">PORTFOLIO</a></li>
+						<li class="active"><a href="#">PORTFOLIO</a></li>
 						<li><a href="About.html">ABOUT</a></li>
-						<li class="active"><a href="#">PHOTOGRAPHY</a></li>
+						<li><a href="Photography.html">PHOTOGRAPHY</a></li>
 						<li><a href="Document/Resume_XuenanXu.pdf" target="_blank">RESUME</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
+
+		<!-- Containt of the page -->
+		<!-- Four projects -->
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<a href="#"> <img src="images/Homemade_Genius.png" class="img-responsive" alt="Homemade Genius"></a>
+				</div>
+				<div class="col-md-6">
+					<a href="GoodBuy.html"> <img src="images/GoodBuy.png" class="img-responsive" alt="GoodBuy"></a>
+				</div>
+				<div class="col-md-6">
+					<a href="#"> <img src="images/Contextual_Inquiry.png" class="img-responsive" alt="Contextual Inquiry"></a>
+				</div>
+				<div class="col-md-6">
+					<a href="#"> <img src="images/Illustrations.png" class="img-responsive" alt="Illustrations"></a>
+
+				</div>
+			</div>
+		</div>
+
 	</header>
-<!-- Photo gallery -->
-	<div class="container text-center">
-			<h1>Photography</h1>
-			<h5>Besides UX Designer, I've been an amateur photographer for 4+ years. I started with digital photography, and now conducting film and iPhone photography as well. I record every beautiful moments with my cameras. Here are some of my works.</h5><br><br>
-
-			<div class="row">
-				<div class="col-md-4">
-					<img src="images/p1.jpg" class="img-responsive" alt="p1">
-				</div>				
-				<div class="col-md-4">
-					<img src="images/p2.jpg" class="img-responsive" alt="p2">
-				</div>	
-				<div class="col-md-4">
-					<img src="images/p9.jpg" class="img-responsive" alt="p3">
-				</div>
-			</div>	
-			
-			<div class="row">
-				<div class="col-md-4">
-					<img src="images/p4.jpg" class="img-responsive" alt="p4">
-				</div>	
-				<div class="col-md-4">
-					<img src="images/p5.jpg" class="img-responsive" alt="p5">
-				</div>	
-				<div class="col-md-4">
-					<img src="images/p3.jpg" class="img-responsive" alt="p6">
-				</div>	
-			</div>
-			
-			<div class="row">
-				<div class="col-md-4">
-					<img src="images/p7.jpg" class="img-responsive" alt="p7">
-				</div>
-				<div class="col-md-4">
-					<img src="images/p8.jpg" class="img-responsive" alt="p8">
-				</div>	
-				<div class="col-md-4">
-					<img src="images/p6.jpg" class="img-responsive" alt="p9">
-				</div>		
-			</div>
-	</div>
-
 	<!-- Footer -->
 	<footer>
 		<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x" aria-label="facebook"></a>
@@ -87,8 +67,7 @@
 		<a href="https://www.instagram.com/xuenanx/" class="fa fa-instagram fa-2x" aria-label="instagram"></a>
 		<br><br><p class="footer"> Design & Code by Xuenan Xu © 2018 </p>
 	</footer>
-
 </body>
 
-</html>
 
+</html>
