--- a/Portfolio_revised/About.html
+++ b/Portfolio_revised/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title> Xuenan Xu | Photography </title>
+	<title> Xuenan Xu | About </title>
 	<meta charset ="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -11,8 +11,8 @@
 	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	
-	
 </head>
+
 <body>
 	<header>
 		<!-- Navigation Bar -->
@@ -26,60 +26,38 @@
 			</button>
 				<a class="navbar-brand" href="Portfolio_Homepage.html"> <img src="images/Logo.png" alt ="Logo" width = "150"> </a>
 				</div>
+				
 				<div id="myNavbar" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="Portfolio_Homepage.html">PORTFOLIO</a></li>
-						<li><a href="About.html">ABOUT</a></li>
-						<li class="active"><a href="#">PHOTOGRAPHY</a></li>
+						<li class="active"><a href="#">ABOUT</a></li>
+						<li><a href="Photography.html">PHOTOGRAPHY</a></li>
 						<li><a href="Document/Resume_XuenanXu.pdf" target="_blank">RESUME</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 	</header>
-<!-- Photo gallery -->
-	<div class="container text-center">
-			<h1>Photography</h1>
-			<h5>Besides UX Designer, I've been an amateur photographer for 4+ years. I started with digital photography, and now conducting film and iPhone photography as well. I record every beautiful moments with my cameras. Here are some of my works.</h5><br><br>
 
-			<div class="row">
-				<div class="col-md-4">
-					<img src="images/p1.jpg" class="img-responsive" alt="p1">
-				</div>				
-				<div class="col-md-4">
-					<img src="images/p2.jpg" class="img-responsive" alt="p2">
-				</div>	
-				<div class="col-md-4">
-					<img src="images/p9.jpg" class="img-responsive" alt="p3">
-				</div>
+		<!-- Navigation Bar -->
+		<div class="container text-center">
+			<div class="about">
+				<h1>Hi! I'm Xuenan Xu</h1>
+				<h5> UX Designer & Photographer</h5>
+				<img src="images/About.png" alt="About">
+			</div>
+		<div class="myIntroduction">
+
+			<p> Hi! I'm Xuenan Xu, a <strong>user experience designer </strong> at University of Michigan. I've also been an amateur <strong> photographer </strong> for 4+ years. My experience of photography makes me a good observer and experiencer in life, and I can spot things that are easily ignored by people. Being a user experience designer, I like to think, analyze and solve problems from the perspective of users. </p>
+			<p> Aside from work, I'm also a cinephile and colaholic. </p>
+			<p>I'm currently looking for a UX internship starting from May 2018 or later. Please feel free to contact me or check my social media for more of my works.</p>
+			<div class="contact">
+				<a id="contact" href="mailto:xuenanxu@umich.edu">CONTACT</a>
 			</div>	
-			
-			<div class="row">
-				<div class="col-md-4">
-					<img src="images/p4.jpg" class="img-responsive" alt="p4">
-				</div>	
-				<div class="col-md-4">
-					<img src="images/p5.jpg" class="img-responsive" alt="p5">
-				</div>	
-				<div class="col-md-4">
-					<img src="images/p3.jpg" class="img-responsive" alt="p6">
-				</div>	
-			</div>
-			
-			<div class="row">
-				<div class="col-md-4">
-					<img src="images/p7.jpg" class="img-responsive" alt="p7">
-				</div>
-				<div class="col-md-4">
-					<img src="images/p8.jpg" class="img-responsive" alt="p8">
-				</div>	
-				<div class="col-md-4">
-					<img src="images/p6.jpg" class="img-responsive" alt="p9">
-				</div>		
-			</div>
-	</div>
+		</div>
+		</div>
 
-	<!-- Footer -->
+		<!-- Footer -->
 	<footer>
 		<a href="https://www.facebook.com/azura.hsu" class="fa fa-facebook fa-2x" aria-label="facebook"></a>
 		<a href="https://twitter.com/xuenanxu" class="fa fa-twitter fa-2x" aria-label="twitter"></a>
@@ -92,3 +70,14 @@
 
 </html>
 
+
+
+
+
+
+
+	
+	
+	
+
+	
